resources/tests/valid_syntax/unary.ct
//Compilation successful!
fn hello()->i32: (-10) - (-10);