resources/tests/invalid_syntax/fn_decl_arg_iden.ct
//`Expected an identifier!
//1
fn hello(i64, )->i64;